--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "authors": [
         {
             "name": ":lky",
-            "email": ":2747865797@qq.com",
-            "homepage": ":http://lky.kim",
+            "email": "2747865797@qq.com",
+            "homepage": "http://lky.kim",
             "role": "Developer"
         }
     ],
