--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "lky_vendor",
         "laravel_command"
     ],
+    "version": "0.0.1",
     "homepage": "https://github.com/lky_vendor/laravel_command",
     "license": "MIT",
     "authors": [
@@ -18,7 +19,8 @@
     ],
     "require": {
         "illuminate/support": "~5.1",
-        "php" : "~5.6|~7.0"
+        "php" : "~5.6|~7.0",
+        "laravel/framework": "5.4.*|5.2.*|5.3.*"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=5.4.3",
@@ -41,10 +43,11 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.0-dev"
+            "dev-master": "1.0-dev"
         }
     },
     "config": {
         "sort-packages": true
     }
+
 }
