--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "illuminate/support": "~5.1",
         "php" : "~5.6|~7.0",
-        "laravel/framework": "5.4.*|5.3.*|5.2.*"
+        "laravel/framework": "5.5.*|5.4.*|5.3.*|5.2.*"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=5.4.3",
